--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/logo/logo.png">
-    <meta property="og:image" content="https://gritinai.com/img/logo/logo.png" />
+    <meta property="og:image" content="#" />
     <!-- Favicons -->
-    <link href="https://gritinai.com/img/logo/logo.png" rel="icon">
-    <link href="https://gritinai.com/img/logo/logo.png" rel="apple-touch-icon">
+    <link href="#" rel="icon">
+    <link href="#" rel="apple-touch-icon">
     <!-- link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  />  
