--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="container py-3">
             <div class="row align-items-center justify-content-center">
-                <div class="col-lg-4">
+                <div class="col-lg-4 mb-4 mb-lg-0">
                     <div class="trade-box">
                         <div class="">
                             <img src="assets/image/trade1.png" alt="" class="img-fluid w-25">
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 mb-4 mb-lg-0">
                     <div class="trade-box">
                         <div class="">
                             <img src="assets/image/trade2.png" alt="" class="img-fluid w-25">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 mb-4 mb-lg-0">
                     <div class="trade-box">
                         <div class="">
                             <img src="assets/image/trade3.png" alt="" class="img-fluid w-25">
