--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <body class="mege-dark">
 
     <header class="header">
-        <div class="navigationbar">
+        <div class="navigationbar" style="background-color: black;">
             <div class="logo">
                 <a href="index.html">
                     <h2>Megetrader</h2>
