--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
 </head>
 <body class="mege-dark">
 
-    <header class="header">
-        <div class="navigationbar" style="background-color: black;">
+    <header class="header" style="background-color: black;">
+        <div class="navigationbar" >
             <div class="logo">
                 <a href="index.html">
                     <h2>Megetrader</h2>
