--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
     </header> 
 
     <section class="hero-section p-50">
+        <div class="shape">
+           <img src="assets/image/lines.png" class="img-fluid lines" alt="">
+        </div>
         <div class="container">
             <div class="hero flex-lg-row flex-column">
                 <div class="secure_reliable">
@@ -197,13 +200,13 @@
                 <table>
                     <tbody class="buy_sell_table">
                         <tr>
-                            <td>Bitcoin</td>
-                            <td>BTC</td>
+                            <td class="text-muted">Bitcoin</td>
+                            <td >BTC</td>
                             <td>$56,290.30</td>
                             <td>+1.68%</td>
                             <td>
                                 <span class="small-graph">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="214" height="56" viewBox="0 0 214 56" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 214 56" fill="none">
                                         <path d="M5 36.9997H35.5L48.5 41.4997L64.3279 34.2965L82.2857 51.9997L113.5 22.9997L126.5 27.4997L140.67 15.8965L162 41.4997L175 30.3481L193.5 33.5997L213 18.7868" stroke="url(#paint0_linear_2161_3234)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                         <defs>
                                           <linearGradient id="paint0_linear_2161_3234" x1="173.235" y1="19.7457" x2="164.602" y2="69.482" gradientUnits="userSpaceOnUse">
@@ -214,16 +217,23 @@
                                     </svg>
                                 </span>
                             </td>
-                            <td>+1.68%</td>
+                            <td>
+                                Trade Now
+                                <span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M12.9091 7L18 12M18 12L12.9091 17M18 12L6 12" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                                    </svg>
+                                </span>
+                            </td>
                         </tr>
                         <tr>
-                            <td>Bitcoin</td>
-                            <td>BTC</td>
+                            <td class="text-muted">Bitcoin</td>
+                            <td >BTC</td>
                             <td>$56,290.30</td>
                             <td>+1.68%</td>
                             <td>
                                 <span class="small-graph">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="214" height="56" viewBox="0 0 214 56" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 214 56" fill="none">
                                         <path d="M5 36.9997H35.5L48.5 41.4997L64.3279 34.2965L82.2857 51.9997L113.5 22.9997L126.5 27.4997L140.67 15.8965L162 41.4997L175 30.3481L193.5 33.5997L213 18.7868" stroke="url(#paint0_linear_2161_3234)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                         <defs>
                                           <linearGradient id="paint0_linear_2161_3234" x1="173.235" y1="19.7457" x2="164.602" y2="69.482" gradientUnits="userSpaceOnUse">
@@ -234,16 +244,23 @@
                                     </svg>
                                 </span>
                             </td>
-                            <td>+1.68%</td>
+                            <td>
+                                Trade Now
+                                <span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M12.9091 7L18 12M18 12L12.9091 17M18 12L6 12" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                                    </svg>
+                                </span>
+                            </td>
                         </tr>
                         <tr>
-                            <td>Bitcoin</td>
-                            <td>BTC</td>
+                            <td class="text-muted">Bitcoin</td>
+                            <td >BTC</td>
                             <td>$56,290.30</td>
                             <td>+1.68%</td>
                             <td>
                                 <span class="small-graph">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="214" height="56" viewBox="0 0 214 56" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 214 56" fill="none">
                                         <path d="M5 36.9997H35.5L48.5 41.4997L64.3279 34.2965L82.2857 51.9997L113.5 22.9997L126.5 27.4997L140.67 15.8965L162 41.4997L175 30.3481L193.5 33.5997L213 18.7868" stroke="url(#paint0_linear_2161_3234)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                         <defs>
                                           <linearGradient id="paint0_linear_2161_3234" x1="173.235" y1="19.7457" x2="164.602" y2="69.482" gradientUnits="userSpaceOnUse">
@@ -254,16 +271,23 @@
                                     </svg>
                                 </span>
                             </td>
-                            <td>+1.68%</td>
+                            <td>
+                                Trade Now
+                                <span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M12.9091 7L18 12M18 12L12.9091 17M18 12L6 12" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                                    </svg>
+                                </span>
+                            </td>
                         </tr>
                         <tr>
-                            <td>Bitcoin</td>
-                            <td>BTC</td>
+                            <td class="text-muted">Bitcoin</td>
+                            <td >BTC</td>
                             <td>$56,290.30</td>
                             <td>+1.68%</td>
                             <td>
                                 <span class="small-graph">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="214" height="56" viewBox="0 0 214 56" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 214 56" fill="none">
                                         <path d="M5 36.9997H35.5L48.5 41.4997L64.3279 34.2965L82.2857 51.9997L113.5 22.9997L126.5 27.4997L140.67 15.8965L162 41.4997L175 30.3481L193.5 33.5997L213 18.7868" stroke="url(#paint0_linear_2161_3234)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                         <defs>
                                           <linearGradient id="paint0_linear_2161_3234" x1="173.235" y1="19.7457" x2="164.602" y2="69.482" gradientUnits="userSpaceOnUse">
@@ -274,16 +298,23 @@
                                     </svg>
                                 </span>
                             </td>
-                            <td>+1.68%</td>
+                            <td>
+                                Trade Now
+                                <span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M12.9091 7L18 12M18 12L12.9091 17M18 12L6 12" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                                    </svg>
+                                </span>
+                            </td>
                         </tr>
                         <tr>
-                            <td>Bitcoin</td>
-                            <td>BTC</td>
+                            <td class="text-muted">Bitcoin</td>
+                            <td >BTC</td>
                             <td>$56,290.30</td>
                             <td>+1.68%</td>
                             <td>
                                 <span class="small-graph">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="214" height="56" viewBox="0 0 214 56" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 214 56" fill="none">
                                         <path d="M5 36.9997H35.5L48.5 41.4997L64.3279 34.2965L82.2857 51.9997L113.5 22.9997L126.5 27.4997L140.67 15.8965L162 41.4997L175 30.3481L193.5 33.5997L213 18.7868" stroke="url(#paint0_linear_2161_3234)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                         <defs>
                                           <linearGradient id="paint0_linear_2161_3234" x1="173.235" y1="19.7457" x2="164.602" y2="69.482" gradientUnits="userSpaceOnUse">
@@ -294,7 +325,41 @@
                                     </svg>
                                 </span>
                             </td>
+                            <td>
+                                Trade Now
+                                <span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M12.9091 7L18 12M18 12L12.9091 17M18 12L6 12" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                                    </svg>
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="text-muted">Bitcoin</td>
+                            <td >BTC</td>
+                            <td>$56,290.30</td>
                             <td>+1.68%</td>
+                            <td>
+                                <span class="small-graph">
+                                    <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 214 56" fill="none">
+                                        <path d="M5 36.9997H35.5L48.5 41.4997L64.3279 34.2965L82.2857 51.9997L113.5 22.9997L126.5 27.4997L140.67 15.8965L162 41.4997L175 30.3481L193.5 33.5997L213 18.7868" stroke="url(#paint0_linear_2161_3234)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <defs>
+                                          <linearGradient id="paint0_linear_2161_3234" x1="173.235" y1="19.7457" x2="164.602" y2="69.482" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#18C8FF"/>
+                                            <stop offset="1" stop-color="#933FFE"/>
+                                          </linearGradient>
+                                        </defs>
+                                    </svg>
+                                </span>
+                            </td>
+                            <td>
+                                Trade Now
+                                <span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M12.9091 7L18 12M18 12L12.9091 17M18 12L6 12" stroke="white" stroke-width="2" stroke-linecap="square"/>
+                                    </svg>
+                                </span>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -304,9 +369,12 @@
 
 
     <section class="customer_support p-50">
+        <div class="shape">
+            <div class="support_image"></div>
+        </div>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
                     <div class="customer_support_image">
                         <img src="assets/image/support.png" width="200" class="img-fluid" alt="">
                     </div>
