--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </header>
 
-    <section class="hero-section p-50 mt-3 mt-lg-0">
+    <section class="hero-section  mt-lg-0">
         <div class="shape">
             <img src="assets/image/lines.png" class="img-fluid lines" alt="">
         </div>
