--- a/contact.html
+++ b/contact.html
@@ -17,40 +17,39 @@
 </head>
 <body class="mege-dark">
 
-    <header class="header" style="background-color: black;">
-        <div class="navigationbar" >
+    <header class="header">
+        <div class="navigationbar">
             <div class="logo">
                 <a href="index.html">
                     <h2>Megetrader</h2>
                 </a>
+            </div>
+            <nav class="me-auto">
+                <ul>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <div class="mobile-view sign_login d-block d-lg-none">
+                        <a href="#">Login</a>
+                        <a href="#">Sign Up</a>
+                    </div>
+                </ul>
+            </nav>
+            <div class="">
+                <button type="button" class="switch-mode">
+                    <svg class="sun text-sm h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+                    </svg> 
+                    <svg class="moon text-sm h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+                    </svg>                      
+                </button>
             </div>
             <div class="hamburger-menu hamburger">
                 <span class="line-menu line-half first-line"></span>
                 <span class="line-menu"></span>
                 <span class="line-menu line-half last-line"></span>
             </div>
-            <div class="menu-overlay"></div>
-            <nav class="me-auto">
-                <div class="mobile-menu-head" >
-                    <!-- <div class="go-back" >
-                      <a href="#">
-                        <h2>Megetrader</h2>
-                      </a>
-                    </div> -->
-                    <div class="mobile-menu-close" >×</div>
-                </div>
-                <ul>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <div class="mobile-view sign_login d-block d-lg-none">
-                        <ul>
-                            <li><a href="#">Login</a></li>
-                            <li><a href="#">Sign Up</a></li>
-                        </ul>
-                    </div>
-                </ul>
-            </nav>
             <div class="sign_login desktop-view d-none d-lg-block">
                 <ul>
                     <li><a href="#">Login</a></li>
@@ -171,7 +170,7 @@
     </section>
 
 
-    <section class=" p-50">
+    <section class="faq p-50">
         <div class="faq-container">
             <div class="faq-one">
 
@@ -296,4 +295,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" ></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="assets/js/main.js"></script>
+<script src="assets/js/script.js"></script>
 </html>
