--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <nav class="me-auto">
                 <ul>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <div class="mobile-view sign_login d-block d-lg-none">
                         <a href="#">Login</a>
@@ -37,7 +37,7 @@
                     </div>
                 </ul>
             </nav>
-            <div class="d-flex">
+            <div class="">
                 <button type="button" class="switch-mode">
                     <svg class="sun text-sm h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
